--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <a href='/?debug'>Click me</a>
+    <h1>Poprintart.com</h1>
+    <a href="https://society6.com/poprint_art">Store</a>
   </body>
 </html>
