feature: add title.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Poprintart.com</title>
   </head>
   <body>
     <h1>Poprintart.com</h1>
