feature: placeholder page.

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <title>Poprintart.com</title>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Permanent+Marker|Source+Serif+Pro">
+          <style>
+            body {
+              background-color: #ff5252;
+            }
+            .nav {
+              margin-top: 20%;
+              text-align: center;
+            }
+            .nav-link {
+              margin-right: 25px;
+              color: whitesmoke;
+              text-decoration: none;
+              font-family: 'Source Serif Pro', serif;
+              font-weight: 800;
+              font-size: 24px;
+            }
+            .nav-logo {
+              font-family: 'Permanent Marker', serif;
+              font-size: 48px;
+              letter-spacing: 0px;
+              color: whitesmoke;
+            }
+          </style>
   </head>
   <body>
-    <h1>Poprintart.com</h1>
-    <a href="https://society6.com/poprint_art">Store</a>
+    <div class=nav>
+      <h1 class=nav-logo>POPrintArt</h1>
+      <a class=nav-link href="https://society6.com/poprint_art">Store</a>
+    </div>
   </body>
 </html>
