--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,17 @@
               text-align: center;
             }
             .nav-link {
-              margin-right: 25px;
               color: whitesmoke;
               text-decoration: none;
+              border-bottom: 0.1em solid whitesmoke; 
               font-family: 'Source Serif Pro', serif;
               font-weight: 800;
-              font-size: 24px;
+              font-size: 3em;
             }
             .nav-logo {
               font-family: 'Permanent Marker', serif;
-              font-size: 48px;
-              letter-spacing: 0px;
+              font-size: 6em;
+              letter-spacing: 0;
               color: whitesmoke;
             }
           </style>
