--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,17 @@
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Permanent+Marker|Source+Serif+Pro">
           <style>
+            html {
+                height: 100%
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
+            }
             body {
-              background-color: #ff5252;
+              background-color: #333;
+              background:url("background.jpeg") no-repeat center top;
+              height:100vh;
             }
             .nav {
               margin-top: 20%;
