feature: more links.

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
           <style>
             html {
                 height: 100%
+                background-color: #868686;
                 -webkit-background-size: cover;
                 -moz-background-size: cover;
                 -o-background-size: cover;
                 background-size: cover;
             }
             body {
-              background-color: #333;
               background:url("background.jpeg") no-repeat center top;
               height:100vh;
             }
@@ -23,6 +23,7 @@
               text-align: center;
             }
             .nav-link {
+              margin-right: 1em;
               color: whitesmoke;
               text-decoration: none;
               border-bottom: 0.1em solid whitesmoke; 
@@ -42,6 +43,8 @@
     <div class=nav>
       <h1 class=nav-logo>POPrintArt</h1>
       <a class=nav-link href="https://society6.com/poprint_art">Store</a>
+      <a class=nav-link href="https://www.instagram.com/poprint_art/">Instagram</a>
+      <a class=nav-link href="mailto:kate@poprintart.com">Email</a>
     </div>
   </body>
 </html>
