bugfix: even margins.

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
               text-align: center;
             }
             .nav-link {
-              margin-right: 1em;
+              margin: 0 0.5em;
               color: whitesmoke;
               text-decoration: none;
               border-bottom: 0.1em solid whitesmoke; 
