refinements: centering and fonts based on feedback.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Poprintart.com</title>
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Permanent+Marker|Source+Serif+Pro">
+          href="https://fonts.googleapis.com/css?family=Questrial|Open+Sans">
           <style>
             html {
                 height: 100%
@@ -15,27 +15,35 @@
                 background-size: cover;
             }
             body {
+              text-align: center;
               background:url("background.jpeg") no-repeat center top;
               height:100vh;
             }
             .nav {
-              margin-top: 20%;
-              text-align: center;
+              margin: 0;
+              position: absolute;
+              top: 45%;
+              left: 50%;
+              -ms-transform: translate(-45%, -50%);
+              transform: translate(-45%, -50%);
             }
             .nav-link {
               margin: 0 0.5em;
               color: whitesmoke;
               text-decoration: none;
               border-bottom: 0.1em solid whitesmoke; 
-              font-family: 'Source Serif Pro', serif;
-              font-weight: 800;
-              font-size: 3em;
+              font-family: 'Open Sans', serif;
+              font-weight: 400;
+              font-size: 2em;
+              text-shadow: 0 2px #111;
             }
             .nav-logo {
-              font-family: 'Permanent Marker', serif;
+              margin: 0 0.25em 0.5em 0.25em;
+              font-family: 'Questrial', serif;
               font-size: 6em;
               letter-spacing: 0;
               color: whitesmoke;
+              text-shadow: 3px 3px #111;
             }
           </style>
   </head>
